--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <p>El cliente procede a pulsar el boton de compra y hace una llamada ha nuestro sistema de stock y devuelve la información de que este producto ya no tiene stock.
         Esto hace que en el front aparezca un Pop-up de error: <strong>El producto XXXXXX ya no tiene stock, lo hemos pasado a tus favoritos para que puedas continuar con tu compra</strong>
      Aparecera un botom con continuar la compra.</p>
+
+     <!--Problemas de mergeo-->
     
     <h2>Solucion del problema: El usuario pulsa en el botom de continuar compra</h2>
     <p>Al usuario pulsar el botom de continuar compra, esto hace que se vuelque el pedido en nuestro sistema y que enlace el producto como favorito a su cuenta el que no tenia stock.</p>
